tests/diagnostics/catalog/snapshots/ir/IR0033.snap
error[IR0033]: IR_E_INVALID_EXPRESSION
 --> tests/diagnostics/catalog/sources/ir/IR0033.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0033
  = help: keep IR validation diagnostics structured and catalog-backed
